Atualizada cor no manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,6 @@
   "start_url": "/",
   "background_color": "#303030",
   "display": "standalone",
-  "theme_color": "#3367D6",
+  "theme_color": "#375A7F",
   "prefer_related_applications": false
 }
